<resources>
    <string name="app_name">Habits Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_habit">Add New Habit</string>
    <string name="background">background</string>
    <string name="habit_color">Habit color</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="periodicity">Periodicity</string>
    <string name="good_habit">Good Habit</string>
    <string name="bad_habit">Bad Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="new_habit">Create New Habit</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="repetition">Repeat: %1$s times in %2$s days</string>
    <string name="good">GOOD</string>
    <string name="bad">BAD</string>
    <string name="habit_added">New Habit added</string>
    <string name="habit_deleted">Habit deleted</string>
    <string name="changes_saved">Changes saved</string>
    <string name="api_status">API Status</string>
    <string name="done">DONE</string>

    <string-array name="habitPriority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="add_habit">Add Habit</string>
    <string name="menu_info">Info</string>
    <string name="show_bottom_sheet">Show bottom sheet</string>
    <string name="search">Search</string>
    <string name="sorts">Sorts</string>

    <string name="empty_title">Empty title</string>
    <string name="empty_description">Empty description</string>
    <string name="empty_quantity">Empty quantity</string>
    <string name="empty_periodicity">Empty periodicity</string>
    <string name="rgb_value">RGB: %1$s</string>
    <string name="hsv_value">HSV: %1$s</string>
    <string name="current_color">Current color</string>

</resources>